--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Casey Spaulding</title>
+	<title>Casey Spaulding Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="description" content="Casey Spaulding Portfolio" />
+	<meta name="keywords" content="Casey Spaulding Portfolio" />
+	<meta name="author" content="Casey Spaulding" />
 
-	<!-- 
+	<!--
 	//////////////////////////////////////////////////////
 
-	FREE HTML5 TEMPLATE 
+	FREE HTML5 TEMPLATE
 	DESIGNED & DEVELOPED by FreeHTML5.co
-		
+
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
 	Twitter: 		http://twitter.com/fh5co
@@ -36,7 +36,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -56,10 +56,10 @@
 
 	</head>
 	<body>
-		
+
 	<div class="fh5co-loader"></div>
-	
-	<div id="page">	
+
+	<div id="page">
 	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
@@ -95,20 +95,20 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Casey Spaulding</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">235 2355 98</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">casey.spaulding@gmail.com</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">www.CaseySpaulding.com</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">Orlando FL 33896</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
+					<p></p>
 					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
+							<li><a href="https://twitter.com/caseyspauldingg"><i class="icon-twitter2"></i></a></li>
 							<li><a href="#"><i class="icon-facebook3"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
@@ -136,11 +136,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Naval Science Instructor</h3>
+									<span class="company">Patrick Henry High School - 2019 - 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -148,11 +148,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Talent Aquisiton Trainer</h3>
+									<span class="company">NRD San Diego - 2016 - 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -177,8 +177,8 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">Bachelors Degree (Cloud Computing)</h3>
+									<span class="company">Western Governors University - 2022 - 2023</span>
 								</div>
 								<div class="timeline-body">
 									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
@@ -189,7 +189,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelors Degree</h3>
+									<h3 class="timeline-title">Bachelors Degree (Business)</h3>
 									<span class="company">University Name - 2002 - 2006</span>
 								</div>
 								<div class="timeline-body">
@@ -226,7 +226,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 
 	<div id="fh5co-features" class="animate-box">
 		<div class="container">
@@ -522,7 +522,7 @@
 								<li><i class="icon-eye2"></i>308</li>
 								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
-						</div> 
+						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -537,7 +537,7 @@
 								<li><i class="icon-eye2"></i>308</li>
 								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
-						</div> 
+						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -552,13 +552,13 @@
 								<li><i class="icon-eye2"></i>308</li>
 								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
-						</div> 
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
@@ -611,18 +611,18 @@
 					<input type="submit" value="Send Message" class="btn btn-primary">
 				</div>
 
-			</form>	
+			</form>
 		</div>
 	</div>
 
 	<div id="map" class="fh5co-map"></div>
 	</div>
-	
+
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+					<p>&copy; 2022 CaseySpaulding.com. All Rights Reserved. <br>Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
 				</div>
 			</div>
 		</div>
@@ -631,7 +631,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -647,10 +647,9 @@
 	<!-- Google Map -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
 	<script src="js/google_map.js"></script>
-	
+
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
 	</body>
 </html>
-
