--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/caseyspauldingg"><i class="icon-twitter2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+									<li><a href="https://www.facebook.com/casey.spaulding"><i class="icon-facebook2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/caseyspaulding/"><i class="icon-linkedin2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -96,7 +95,6 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Casey Spaulding</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">235 2355 98</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">casey.spaulding@gmail.com</span></li>
 						<li><span class="first-block">Website:</span><span class="second-block">www.CaseySpaulding.com</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Orlando FL 33896</span></li>
@@ -110,8 +108,7 @@
 						<ul class="fh5co-social-icons">
 							<li><a href="https://twitter.com/caseyspauldingg"><i class="icon-twitter2"></i></a></li>
 							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/caseyspaulding/"><i class="icon-linkedin2"></i></a></li>			
 						</ul>
 					</p>
 				</div>
@@ -615,7 +612,6 @@
 		</div>
 	</div>
 
-	<div id="map" class="fh5co-map"></div>
 	</div>
 
 	<div id="fh5co-footer">
